<resources>
    <string name="app_name">Job Management</string>
    <string name="app_description">Giúp quản lý công việc hiệu quả hơn</string>

    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="domain">Tên miền</string>
    <string name="full_name">Họ và tên</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="account_type">Loại tài khoản</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>

    <string name="job_start">Thời gian bắt đầu</string>
    <string name="job_end">Thời gian kết thúc</string>

    <!--Label editText-->
    <string name="job_title">Tiêu đề</string>
    <string name="job_description">Mô tả</string>

    <!--Label textView-->
    <string name="job_list">Danh sách nhân viên</string>
    <string name="set_birth_day">Chọn ngày sinh</string>
    <string name="set_job_start">Chọn thời gian bắt đầu</string>
    <string name="set_job_end">Chọn thời gian kết thúc</string>
    <string name="job_message">Hiện tại bạn chưa có công việc nào</string>
    <string name="job_message_admin">Hiện tại bạn chưa giao công việc nào</string>
    <string name="employee_message">Hiện tại bạn chưa có nhân viên nào</string>

    <!--Label button-->
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="receive_job">Nhận công việc</string>
    <string name="complete_jod">Hoàn thành</string>
    <string name="edit_job">Chỉnh sửa</string>
    <string name="delete_jod">Xóa</string>
    <string name="register">Thêm nhân viên</string>
    <string name="job_add">Thêm công việc</string>
    <string name="add">Chọn</string>
    <string name="statistic">Thống kê</string>
    <string name="save">Lưu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_my_employees">Management Employees</string>
    <string name="title_activity_my_account">Management My Account</string>
    <string name="title_activity_information">My Information</string>
    <string name="title_activity_add_job">Add Job</string>
    <string name="title_activity_add_employee">Add Employee</string>
    <string name="title_activity_employee">Employee</string>
    <string name="title_activity_my_job">My Job</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_detail_account">Detail Account</string>
    <string name="title_activity_detail_job">Detail Job</string>

    <!--Message and Notification-->
    <string name="message_admin">Quản lý</string>
    <string name="message_employee">Nhân viên</string>
    <string name="message_edit_and_save">Bạn chưa lưu, bạn vẫn muốn thoát?</string>
    <string name="message_positive_save">Thoát</string>
    <string name="message_negative_save">Hủy</string>
    <string name="message_delete_job">Bạn có chắc muốn xóa?</string>
    <string name="message_positive_delete_job">Hủy</string>
    <string name="message_negative_delete_job">Xóa</string>

    <!--Dialog-->
    <string name="dialog">Đang tải…</string>
    <string name="dialog_choose_account_type">Chọn loại tài khoản</string>
    <string name="notification_title">Thông báo</string>
    <string name="notification_text">Có công việc chưa nhận</string>
    <string name="dialog_change_wifi">Vui lòng kiểm tra kết nối mạng</string>
    <string name="dialog_change_wifi_title">Đang kiểm tra kết nối mạng</string>
    <string name="dialog_change_wifi_positive">Kiểm tra</string>
    <string name="dialog_change_wifi_negative">Thoát</string>

    <!--Toast V2-->
    <string name="toast_full_name_empty">Họ tên rỗng</string>
    <string name="toast_username_empty">Tên đăng nhập rỗng</string>
    <string name="toast_password_incorrect">Mật khẩu chứa ít nhất 6 ký tự</string>
    <string name="toast_domain_incorrect">Tên miền không đúng</string>
    <string name="toast_domain_exist">Tên miền tồn tại</string>
    <string name="toast_phone_incorrect">Số điện thoại không đúng</string>
    <string name="toast_sign_up_success">Đăng ký thành công</string>
    <string name="toast_sign_up_fail">Đăng ký thất bại</string>
    <string name="toast_account_incorrect">Tài khoản không đúng</string>
    <string name="toast_internet">Mất kết nối mạng</string>
    <string name="toast_title_empty">Tên đăng nhập rỗng</string>
    <string name="toast_date_fail">Ngày không hợp lệ</string>
    <string name="toast_list_empty">Chưa thêm nhân viên</string>
    <string name="toast_add_employee_success">Thêm nhân viên thành công</string>
    <string name="toast_delete_success">Xóa thành công</string>
    <string name="toast_delete_fail">Xóa thất bại</string>
    <string name="toast_add_employee_not_success">Có lỗi khi thêm nhân viên</string>
    <string name="toast_add_all_employee">Bạn đã thêm toàn bộ nhân viên</string>
    <string name="toast_add_job_success">Thêm công việc thành công</string>

    <string name="message_graph_state">Trạng thái</string>
    <string name="spannable_total"> Công việc được giao</string>
    <string name="spannable_receive"> Công việc đã nhận</string>
    <string name="spannable_not_receive"> Công việc chưa nhận</string>

    <string name="lable_tap_total"> TỔNG</string>
    <string name="lable_tap_receive"> ĐÃ NHẬN</string>
    <string name="lable_tap_not_receive">CHƯA NHẬN</string>

    <string name="label_mn_my_account">Quản lý tài khoản cá nhân</string>
    <string name="label_mn_my_employees">Quản lý nhân viên</string>
    <string name="label_mn_my_job">Công việc của tôi</string>
    <string name="label_mn_sign_out">Đăng xuất</string>
    <string name="label_mn_information">Thông tin ứng dụng</string>
    <string name="label_mn_statistic">Thống kê</string>
    <string name="label_mn_about">Về chúng tôi</string>
    <string name="label_info_version">Phiên bản</string>


</resources>
