<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_detail_account"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/smallbackground" />

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_menu_slideshow" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="#ebca0707"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_edit" />


                <EditText
                    android:id="@+id/edt_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:text="Administrator"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_full_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="CEO"
                    android:textColor="#fff"
                    android:textSize="24sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ln_birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/profile_layout"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:text="@string/birth_day"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_phone"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ln_birthday"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:textColor="#000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_address"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ln_phone"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:text="@string/address"
                    android:textColor="#000"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:text="Can Tho"
                    android:textColor="#000"
                    android:textSize="20dp" />
            </LinearLayout>

            <Button
                android:layout_centerInParent="true"
                android:id="@+id/btn_statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_address"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/custom_button"
                android:gravity="center"
                android:text="@string/statistic"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
